trunk/Archive2/fd/d9aba69e2867cd/output
+ clang++ -std=c++11 -O3 -g -Wall -Wextra -Wpedantic main.cpp
main.cpp:57:5: error: no matching function for call to 'print'
    print(oink());
    ^~~~~
main.cpp:44:6: note: candidate template ignored: couldn't infer template argument ''
void print(T t) {
     ^
main.cpp:49:6: note: candidate template ignored: couldn't infer template argument ''
void print(T t, Ts&&... ts) {
     ^
1 error generated.
